compiler/src/compile/snapshots/compiler__compile__ir__test__ir_generation_snapshot_tests@extern_call_nested.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/ir.rs
expression: output
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/ir/extern_call_nested.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
temp.3 = int 5
temp.2 = extern transform(temp.3)
result.0 = double(temp.2)
return 

=======================
fn double(x.1) -> int

---- block 0 ----
temp.5 = x.1
temp.6 = int 2
temp.4 = temp.5 * temp.6
return temp.4
