compiler/src/compile/snapshots/compiler__compile__ir__test__ir_generation_snapshot_tests@extern_call_statement.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/ir.rs
expression: output
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/ir/extern_call_statement.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
temp.0 = int 42
temp.1 = fix 3.5
extern do_something(temp.0, temp.1)
return
