compiler/src/compile/snapshots/compiler__compile__ir__test__ir_generation_snapshot_tests@field_access_nested.tapir.snap
---
source: compiler/src/compile/ir.rs
expression: output
input_file: compiler/src/compile/snapshot_tests/ir/field_access_nested.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
return 

=======================
fn test_nested_access() -> 

---- block 0 ----
temp.15 = int 0
temp.16 = int 0
temp.12.x.13 = temp.15
temp.12.y.14 = temp.16
temp.19 = temp.12.x.13
temp.11.x.17 = temp.19
temp.20 = temp.12.y.14
temp.11.y.18 = temp.20
temp.25 = int 10
temp.26 = int 20
temp.22.x.23 = temp.25
temp.22.y.24 = temp.26
temp.29 = temp.22.x.23
temp.21.x.27 = temp.29
temp.30 = temp.22.y.24
temp.21.y.28 = temp.30
temp.4.origin.x.6 = temp.11.x.17
temp.4.origin.y.7 = temp.11.y.18
temp.4.size.x.9 = temp.21.x.27
temp.4.size.y.10 = temp.21.y.28
temp.37 = temp.4.origin.x.6
temp.3.origin.x.32 = temp.37
temp.38 = temp.4.origin.y.7
temp.3.origin.y.33 = temp.38
temp.39 = temp.4.size.x.9
temp.3.size.x.35 = temp.39
temp.40 = temp.4.size.y.10
temp.3.size.y.36 = temp.40
temp.47 = temp.3.origin.x.32
r.origin.x.42 = temp.47
temp.48 = temp.3.origin.y.33
r.origin.y.43 = temp.48
temp.49 = temp.3.size.x.35
r.size.x.45 = temp.49
temp.50 = temp.3.size.y.36
r.size.y.46 = temp.50
temp.60 = r.origin.x.42
temp.53.origin.x.55 = temp.60
temp.61 = r.origin.y.43
temp.53.origin.y.56 = temp.61
temp.62 = r.size.x.45
temp.53.size.x.58 = temp.62
temp.63 = r.size.y.46
temp.53.size.y.59 = temp.63
temp.66 = temp.53.origin.x.55
temp.52.x.64 = temp.66
temp.67 = temp.53.origin.y.56
temp.52.y.65 = temp.67
temp.51 = temp.52.x.64
x.1 = temp.51
temp.77 = r.origin.x.42
temp.70.origin.x.72 = temp.77
temp.78 = r.origin.y.43
temp.70.origin.y.73 = temp.78
temp.79 = r.size.x.45
temp.70.size.x.75 = temp.79
temp.80 = r.size.y.46
temp.70.size.y.76 = temp.80
temp.83 = temp.70.size.x.75
temp.69.x.81 = temp.83
temp.84 = temp.70.size.y.76
temp.69.y.82 = temp.84
temp.68 = temp.69.y.82
y.2 = temp.68
return
