compiler/src/compile/snapshots/compiler__compile__ir__test__ir_generation_snapshot_tests@field_assignment_nested.tapir.snap
---
source: compiler/src/compile/ir.rs
expression: output
input_file: compiler/src/compile/snapshot_tests/ir/field_assignment_nested.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
temp.2 = int 0
temp.3 = int 0
temp.1.x.4 = temp.2
temp.1.y.5 = temp.3
temp.7 = int 10
temp.8 = int 10
temp.6.x.9 = temp.7
temp.6.y.10 = temp.8
r.origin.x.12 = temp.1.x.4
r.origin.y.13 = temp.1.y.5
r.size.x.15 = temp.6.x.9
r.size.y.16 = temp.6.y.10
temp.17 = int 5
r.origin.x.12 = temp.17
temp.18 = int 20
r.size.y.16 = temp.18
return
