compiler/src/compile/snapshots/compiler__compile__ir__test__ir_generation_snapshot_tests@field_assignment_simple.tapir.snap
---
source: compiler/src/compile/ir.rs
expression: output
input_file: compiler/src/compile/snapshot_tests/ir/field_assignment_simple.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
temp.4 = int 1
temp.5 = int 2
temp.1.x.2 = temp.4
temp.1.y.3 = temp.5
temp.8 = temp.1.x.2
p.x.6 = temp.8
temp.9 = temp.1.y.3
p.y.7 = temp.9
temp.10 = int 10
p.x.6 = temp.10
temp.11 = int 20
p.y.7 = temp.11
return
