compiler/src/compile/snapshots/compiler__compile__ir__test__ir_generation_snapshot_tests@global_nested_struct_assignment.tapir.snap
---
source: compiler/src/compile/ir.rs
expression: output
input_file: compiler/src/compile/snapshot_tests/ir/global_nested_struct_assignment.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
temp.11 = int 1
temp.12 = int 2
temp.8.x.9 = temp.11
temp.8.y.10 = temp.12
temp.15 = temp.8.x.9
temp.7.x.13 = temp.15
temp.16 = temp.8.y.10
temp.7.y.14 = temp.16
temp.21 = int 100
temp.22 = int 50
temp.18.x.19 = temp.21
temp.18.y.20 = temp.22
temp.25 = temp.18.x.19
temp.17.x.23 = temp.25
temp.26 = temp.18.y.20
temp.17.y.24 = temp.26
temp.0.origin.x.2 = temp.7.x.13
temp.0.origin.y.3 = temp.7.y.14
temp.0.size.x.5 = temp.17.x.23
temp.0.size.y.6 = temp.17.y.24
temp.27 = temp.0.origin.x.2
setglobal 1, temp.27
temp.28 = temp.0.origin.y.3
setglobal 2, temp.28
temp.29 = temp.0.size.x.5
setglobal 3, temp.29
temp.30 = temp.0.size.y.6
setglobal 4, temp.30
getglobal temp.36, 1
temp.33.x.34 = temp.36
getglobal temp.37, 2
temp.33.y.35 = temp.37
temp.32 = temp.33.x.34
temp.31 = extern test(temp.32)
getglobal temp.43, 3
temp.40.x.41 = temp.43
getglobal temp.44, 4
temp.40.y.42 = temp.44
temp.39 = temp.40.y.42
temp.38 = extern test(temp.39)
return
