compiler/src/compile/snapshots/compiler__compile__ir__test__ir_generation_snapshot_tests@global_struct_assignment.tapir.snap
---
source: compiler/src/compile/ir.rs
expression: output
input_file: compiler/src/compile/snapshot_tests/ir/global_struct_assignment.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
temp.1 = int 10
temp.2 = int 20
temp.0.x.3 = temp.1
temp.0.y.4 = temp.2
temp.5 = temp.0.x.3
setglobal 1, temp.5
temp.6 = temp.0.y.4
setglobal 2, temp.6
getglobal temp.8, 1
temp.7 = extern test(temp.8)
return
